--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "@vitejs/plugin-react": "^4.3.4",
         "framer-motion": "^10.12.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^7.4.0"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.21",
